# data_task

./: .gitignore  CreateActivityTable.sql  CreateStationTable.sql  README.md  ave.csv  common_pair.csv  crawler.py  main.py  pyproject.toml  redshift_operator.py
test/: test_crawler.py
