[tool.poetry]
name = "skyfri-task"
version = "0.1.0"
description = ""
authors = ["Wataru Yamaguchi"]
readme = "README.md"
packages = [{include = "skyfri_task"}]

[tool.poetry.dependencies]
python = "^3.9"
awswrangler = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
